--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,48 +36,41 @@ android {
     }
     signingConfigs {
         release {
-            final KEYSTORE_PATH = 'RELEASE_KEYSTORE_PATH'
-            final KEYSTORE_PASSWORD = 'RELEASE_KEYSTORE_PASSWORD'
-            final ALIAS_KEY = 'RELEASE_KEY_ALIAS'
-            final PASSWORD_KEY = 'RELEASE_KEY_PASSWORD'
-            def keystoreProperties = new Properties()
-            def keystorePropertiesFile = rootProject.file("local.properties")
-            if (keystorePropertiesFile.exists()) {
-                keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-            }
-            if (keystoreProperties[KEYSTORE_PATH] == null) {
-                keystoreProperties.put(
-                        KEYSTORE_PATH,
-                        System.getenv(KEYSTORE_PATH)
-                )
-                keystoreProperties.put(
-                        KEYSTORE_PASSWORD,
-                        System.getenv(KEYSTORE_PASSWORD)
-                )
-                keystoreProperties.put(
-                        ALIAS_KEY,
-                        System.getenv(ALIAS_KEY)
-                )
-                keystoreProperties.put(
-                        PASSWORD_KEY,
-                        System.getenv(PASSWORD_KEY)
-                )
-            }
-            if (!keystoreProperties.isEmpty()) {
-                try {
+            def env = System.getenv();
+            if (env['CI'] && env['GITHUB_WORKFLOW'] == 'Release') {
+                final KEYSTORE_PATH = 'RELEASE_KEYSTORE_PATH'
+                final KEYSTORE_PASSWORD = 'RELEASE_KEYSTORE_PASSWORD'
+                final ALIAS_KEY = 'RELEASE_KEY_ALIAS'
+                final PASSWORD_KEY = 'RELEASE_KEY_PASSWORD'
+                def keystoreProperties = new Properties()
+                def keystorePropertiesFile = rootProject.file("local.properties")
+                if (keystorePropertiesFile.exists()) {
+                    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+                }
+                if (keystoreProperties[KEYSTORE_PATH] == null) {
+                    keystoreProperties.put(
+                            KEYSTORE_PATH,
+                            env[KEYSTORE_PATH]
+                    )
+                    keystoreProperties.put(
+                            KEYSTORE_PASSWORD,
+                            env[KEYSTORE_PASSWORD]
+                    )
+                    keystoreProperties.put(
+                            ALIAS_KEY,
+                            env[ALIAS_KEY]
+                    )
+                    keystoreProperties.put(
+                            PASSWORD_KEY,
+                            env[PASSWORD_KEY]
+                    )
+                }
+                if (!keystoreProperties.isEmpty()) {
                     storeFile file(keystoreProperties[KEYSTORE_PATH])
                     storePassword keystoreProperties[KEYSTORE_PASSWORD]
                     keyAlias keystoreProperties[ALIAS_KEY]
                     keyPassword keystoreProperties[PASSWORD_KEY]
-                } catch (ignore) {
-                    throw new InvalidUserDataException(
-                            "You should define sign keys in gradle.properties or int ENV."
-                    )
                 }
-            } else {
-                throw new InvalidUserDataException(
-                        "You should define sign keys in gradle.properties or in ENV."
-                )
             }
         }
     }
